--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
         run: go build .
 
       - name: Archive production artifacts
-        run: tar czvf cobra-cli.tar.gz cobra-cli
+        run: tar czvf cs-cli.tar.gz cs-cli
 
       - name: Set up Ruby
         uses: actions/setup-ruby@v1
@@ -39,4 +39,4 @@ jobs:
           brew bottle --merge --write --no-commit ./Formula/cobra-cli.rb
           git -C $(brew --repo homebrew/core) checkout master
           git -C $(brew --repo homebrew/core) pull
-          brew bump-formula-pr --no-browse --no-fork --commit-url=https://github.com/DenisOzindzheDev/cs-cli/releases/tag/v0.0.1 --strict cobra-cli
+          brew bump-formula-pr --no-browse --no-fork --commit-url=https://github.com/DenisOzindzheDev/cs-cli/releases/tag/v0.0.1 --strict cs-cli
